--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "houseofsingh",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,14 +11,26 @@
     "@chakra-ui/react": "^1.7.3",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
+    "axios": "^0.24.0",
+    "browser-image-compression": "^1.0.17",
+    "firebase": "^8.10.0",
     "framer-motion": "^4.1.17",
+    "html-react-parser": "^1.4.4",
+    "moment": "^2.29.1",
     "next": "12.0.7",
     "react": "17.0.2",
+    "react-aws-s3": "^1.5.0",
+    "react-date-picker": "^8.3.6",
+    "react-datepicker": "^4.5.0",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-firebase-hooks": "^3.0.5",
+    "react-firebaseui": "^6.0.0",
+    "react-icons": "^4.3.1",
+    "react-s3": "^1.3.1"
   },
   "devDependencies": {
     "eslint": "8.4.1",
-    "eslint-config-next": "12.0.7"
+    "eslint-config-next": "12.0.7",
+    "typescript": "^4.5.4"
   }
 }
