--- a/package.json
+++ b/package.json
@@ -8,27 +8,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.7",
     "@aws-sdk/client-s3": "^3.45.0",
     "@aws-sdk/lib-storage": "^3.45.0",
     "@chakra-ui/react": "^1.7.3",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
+    "@tinymce/tinymce-react": "^3.13.0",
     "axios": "^0.24.0",
     "browser-image-compression": "^1.0.17",
     "firebase": "^8.10.0",
     "framer-motion": "^4.1.17",
-    "html-react-parser": "^1.4.4",
+    "html-react-parser": "^1.4.0",
     "moment": "^2.29.1",
-    "next": "12.0.7",
+    "next": "11.1.2",
+    "quill": "^1.3.6",
     "react": "17.0.2",
     "react-aws-s3": "^1.5.0",
     "react-date-picker": "^8.3.6",
     "react-datepicker": "^4.5.0",
     "react-dom": "17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-firebase-hooks": "^3.0.5",
     "react-firebaseui": "^6.0.0",
     "react-icons": "^4.3.1",
-    "react-s3": "^1.3.1"
+    "react-s3": "^1.3.1",
+    "sass": "^1.48.0"
   },
   "devDependencies": {
     "eslint": "8.4.1",
