--- a/package.json
+++ b/package.json
@@ -33,11 +33,12 @@
     "react-firebaseui": "^6.0.0",
     "react-icons": "^4.3.1",
     "react-s3": "^1.3.1",
-    "sass": "^1.48.0"
+    "sass": "^1.48.0",
+    "graphql": "^15.6.1"
   },
   "devDependencies": {
     "eslint": "7.32.0",
-    "eslint-config-next": "12.0.7",
+    "eslint-config-next": "11.1.2",
     "typescript": "^4.5.4"
   }
 }
