--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-firebaseui": "^6.0.0",
     "react-icons": "^4.3.1",
     "react-lottie": "^1.2.3",
+    "react-reveal": "^1.2.2",
     "react-s3": "^1.3.1",
     "sass": "^1.48.0"
   },
